# namer

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  README.md.tmp  config.json  convert_checkpoint.py  generation_config.json  model.safetensors  namer_model.pt  pyproject.toml  upload.sh
namer/: __init__.py  __main__.py  data.py  inference.py  main.py  modeling_namer.py  models.py  training.py  utils.py
pip-tmp/jiti/: agents-agent-management.2587ecf7.mjs  agents-agent-scope.515c0bc4.mjs  agents-agent-selection.a867544e.mjs  agents-agent-serializer.61dec55f.mjs  agents-agents.f0509ee2.mjs  agents-chain-serializer.a832da0e.mjs  agents-frontmatter.6976eaf1.mjs  agents-identity.568fcc02.mjs  agents-skills.af023ec8.mjs  background-async-execution.0e72180b.mjs  background-async-job-tracker.6fb217e9.mjs  background-async-resume.8fb594f6.mjs  background-async-status.51801569.mjs  background-completion-dedupe.b4a5ebb9.mjs  background-notify.20a22f54.mjs  background-parallel-groups.e70893a1.mjs  background-result-watcher.056baed0.mjs  background-run-status.37d535df.mjs  background-stale-run-reconciler.52d9f1fc.mjs  background-top-level-async.2257c9e0.mjs  extension-control-notices.20f5052e.mjs  extension-doctor.43600346.mjs  extension-index.80330c2b.mjs  extension-schemas.9e6ee9e3.mjs  foreground-chain-clarify.558277eb.mjs  foreground-chain-execution.e441430b.mjs  foreground-execution.7bdac23f.mjs  foreground-subagent-executor.425806a0.mjs  intercom-intercom-bridge.88630197.mjs  intercom-result-intercom.32a45520.mjs  pi-web-access-activity.4dfe2849.mjs  pi-web-access-chrome-cookies.ad56e10d.mjs  pi-web-access-code-search.f93c7d37.mjs  pi-web-access-curator-page.f382e376.mjs  pi-web-access-curator-server.2a16f6fa.mjs  pi-web-access-exa.b5c6a885.mjs  pi-web-access-extract.baf16c13.mjs  pi-web-access-gemini-api.b8e0a3b9.mjs  pi-web-access-gemini-search.037a514f.mjs  pi-web-access-gemini-url-context.ea2bdc30.mjs  (+41 more)
pip-tmp/node-compile-cache/v22.20.0-x64-9de703df-1000/: 0043e15d  004cb10c  00c13d67  012932b3  013f4bf6  0191692d  01cfe6ce  022692ff  026eb141  037c7b8a  03e2a8d6  04bbaedd  04fd82b0  055b2578  061f8346  062f7d4e  072ac5bc  07a8afeb  0855855b  09dbddc5  0a4a1f09  0a6224b6  0a6eb810  0a98972f  0af4bd91  0be16f94  0be269a0  0c1b52f5  0c7da3bc  0c7e6b3a  0caf417d  0d7e5f71  0e128d2e  (+429 more)
tests/: __init__.py  test_data.py  test_inference.py  test_models.py  test_utils.py
